crates/php-parser/tests/snapshots/integration__asymmetric_visibility.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
class User {
    public protected(set) string $name;
    public private(set) int $age;
    protected private(set) string $email = '';
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "User",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "name",
                  "visibility": "Public",
                  "set_visibility": "Protected",
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 45,
                          "end": 51
                        }
                      }
                    },
                    "span": {
                      "start": 45,
                      "end": 51
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 23,
                "end": 57
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "age",
                  "visibility": "Public",
                  "set_visibility": "Private",
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "int"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 83,
                          "end": 86
                        }
                      }
                    },
                    "span": {
                      "start": 83,
                      "end": 86
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 63,
                "end": 91
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "email",
                  "visibility": "Protected",
                  "set_visibility": "Private",
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 120,
                          "end": 126
                        }
                      }
                    },
                    "span": {
                      "start": 120,
                      "end": 126
                    }
                  },
                  "default": {
                    "kind": {
                      "String": ""
                    },
                    "span": {
                      "start": 136,
                      "end": 138
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 97,
                "end": 138
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 141
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 141
  }
}
